--- a/app/design/frontend/awpackage/default/template/catalog/product/list/toolbar.phtml
+++ b/app/design/frontend/awpackage/default/template/catalog/product/list/toolbar.phtml
@@ -82,18 +82,23 @@
 
         <div class="sort-by">
             <label><?php echo $this->__('Sort By') ?></label>
-            <select onchange="setLocation(this.value)">
+            <ul>
+                <?php foreach ($this->getAvailableOrders() as $_key=>$_order): ?>
+                    <li><span onclick="setLocation(this.id)" id="<?php echo $this->getOrderUrl($_key, 'asc') ?>"<?php if($this->isOrderCurrent($_key)): ?> class="active"<?php endif; ?>><?php echo $this->__($_order) ?></span></li>
+                <?php endforeach; ?>
+            </ul>
+<!--             <select onchange="setLocation(this.value)">
             <?php foreach($this->getAvailableOrders() as $_key=>$_order): ?>
                 <option value="<?php echo $this->getOrderUrl($_key, 'asc') ?>"<?php if($this->isOrderCurrent($_key)): ?> selected="selected"<?php endif; ?>>
                     <?php echo $this->__($_order) ?>
                 </option>
             <?php endforeach; ?>
-            </select>
-            <?php if($this->getCurrentDirection() == 'desc'): ?>
+            </select> -->
+            <!-- <?php if($this->getCurrentDirection() == 'desc'): ?>
                 <a href="<?php echo $this->getOrderUrl(null, 'asc') ?>" title="<?php echo Mage::helper('core')->quoteEscape($this->__('Set Ascending Direction')) ?>"><img src="<?php echo $this->getSkinUrl('images/i_desc_arrow.gif') ?>" alt="<?php echo Mage::helper('core')->quoteEscape($this->__('Set Ascending Direction')) ?>" class="v-middle" /></a>
             <?php else: ?>
                 <a href="<?php echo $this->getOrderUrl(null, 'desc') ?>" title="<?php echo Mage::helper('core')->quoteEscape($this->__('Set Descending Direction')) ?>"><img src="<?php echo $this->getSkinUrl('images/i_asc_arrow.gif') ?>" alt="<?php echo Mage::helper('core')->quoteEscape($this->__('Set Descending Direction')) ?>" class="v-middle" /></a>
-            <?php endif; ?>
+            <?php endif; ?> -->
         </div>
     </div>
     <?php endif; ?>
