--- a/app/design/frontend/awpackage/default/template/catalog/product/list/toolbar.phtml
+++ b/app/design/frontend/awpackage/default/template/catalog/product/list/toolbar.phtml
@@ -47,7 +47,8 @@
                     <?php echo $_limit ?>
                 </option>
             <?php endforeach; ?>
-            </select> --> <?php echo $this->__('per page') ?>
+            </select> --> 
+            <!-- <?php echo $this->__('per page') ?> -->
         </div>
 
         <?php echo $this->getPagerHtml() ?>
