--- a/skin/frontend/awpackage/default/css/less/styles.less
+++ b/skin/frontend/awpackage/default/css/less/styles.less
@@ -956,6 +956,30 @@ li.m-selected-ln-item:hover a {
 .m-filter-css-checkboxes li.m-disabled a:hover {
 	color: @lightgrey !important;
 }
+.sort-by, .pager {
+	.dinblocktop;
+	border-radius: 4px;
+    overflow: hidden;
+    font-size: 12px;
+    color: #000;
+    height: 27px;
+    line-height: 27px;
+    background: @lightblue;
+}
+.sort-by {
+	float: left;
+}
+.pager {
+	float: right;
+}
+.sort-by label,
+.pager label,
+.sort-by ul,
+.pager ul,
+.sort-by ul li,
+.pager ul li {
+	.dinblocktop;
+}
 /*Catalog Page --end*/
 /*About company block --end*/
 /* Main Container -- end */
