--- a/skin/frontend/awpackage/default/css/less/styles.less
+++ b/skin/frontend/awpackage/default/css/less/styles.less
@@ -980,6 +980,20 @@ li.m-selected-ln-item:hover a {
 .pager ul li {
 	.dinblocktop;
 }
+.sort-by ul,
+.pager ul,
+.sort-by ul li,
+.pager ul li {
+	.mp0;
+}
+.total {
+	float: left;
+	font-size: 12px;
+    color: #000;
+    height: 27px;
+    line-height: 27px;
+    background: @lightblue;
+}
 /*Catalog Page --end*/
 /*About company block --end*/
 /* Main Container -- end */
