--- a/skin/frontend/awpackage/default/css/less/styles.less
+++ b/skin/frontend/awpackage/default/css/less/styles.less
@@ -966,6 +966,13 @@ li.m-selected-ln-item:hover a {
     line-height: 27px;
     background: @lightblue;
 }
+.sort-by:after,
+.pager:after,
+.total:after {
+	content: '';
+    display: block;
+    clear: both;
+}
 .sort-by {
 	float: left;
 }
