--- a/skin/frontend/awpackage/default/css/less/styles.less
+++ b/skin/frontend/awpackage/default/css/less/styles.less
@@ -956,7 +956,7 @@ li.m-selected-ln-item:hover a {
 .m-filter-css-checkboxes li.m-disabled a:hover {
 	color: @lightgrey !important;
 }
-.sort-by, .pager {
+.sorter, .pager {
 	.dinblocktop;
 	border-radius: 4px;
     overflow: hidden;
@@ -966,30 +966,30 @@ li.m-selected-ln-item:hover a {
     line-height: 27px;
     background: @lightblue;
 }
-.sort-by:after,
+.sorter:after,
 .pager:after,
 .total:after {
 	content: '';
     display: block;
     clear: both;
 }
-.sort-by {
+.sorter {
 	float: left;
 }
 .pager {
 	float: right;
 }
-.sort-by label,
+.sorter label,
 .pager label,
-.sort-by ul,
+.sorter ul,
 .pager ul,
-.sort-by ul li,
+.sorter ul li,
 .pager ul li {
 	.dinblocktop;
 }
-.sort-by ul,
+.sorter ul,
 .pager ul,
-.sort-by ul li,
+.sorter ul li,
 .pager ul li {
 	.mp0;
 }
