--- a/skin/frontend/awpackage/default/css/less/styles.less
+++ b/skin/frontend/awpackage/default/css/less/styles.less
@@ -956,7 +956,7 @@ li.m-selected-ln-item:hover a {
 .m-filter-css-checkboxes li.m-disabled a:hover {
 	color: @lightgrey !important;
 }
-.sorter, .pager {
+.sorter, .pager, .total{
 	.dinblocktop;
 	border-radius: 4px;
     overflow: hidden;
@@ -975,6 +975,9 @@ li.m-selected-ln-item:hover a {
 }
 .sorter {
 	float: left;
+}
+.sorter p {
+	.mp0;
 }
 .pager {
 	float: right;
@@ -1000,6 +1003,9 @@ li.m-selected-ln-item:hover a {
     height: 27px;
     line-height: 27px;
     background: @lightblue;
+}
+.total p {
+	.mp0;
 }
 /*Catalog Page --end*/
 /*About company block --end*/
